# Cervantes

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/info/gianlucacosta/cervantes/: __init__.py  inspectors.py  partial_term.py  terms.py
src/info/gianlucacosta/cervantes/sqlite/: dictionary.py  schema.py  serializers.py
tests/: test_extract_terms.py  test_pipeline.py
tests/pages/: __init__.py  abitado.txt  abundadamente.txt  acudiría.txt  ah.txt  amar.txt  aunque.txt  body.txt  cara.txt  caro.txt  cerca.txt  el.txt  flor.txt  flores.txt  hacia.txt  hecho.txt  la.txt  lucid.txt  maravillosa.txt  maravilloso.txt  modo.txt  modos.txt  naranja.txt  o.txt  pronombre_personal.txt  reírse.txt  rápidamente.txt  segará.txt  sido.txt  sobre.txt  tijeras.txt  totora.txt  tuya.txt  tuyas.txt  tuyo.txt  tórax.txt  veces.txt  venir.txt  vez.txt  vino.txt  (+5 more)
tests/sqlite/: schema.py  test_spanish_dictionary.py  test_sqlite_pipeline.py
